--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<app-escena [frases]="frases"></app-escena>
+<p *ngIf="!emepzarVar"> desenvolupem un tutorial, en la qual mitjançant dos botons els nous 
+    usuaris puguin avançar i retrocedir en els consells, modificant-se 
+    el text d'ajuda i la imatge de fons.</p>
+    <br>
+<button *ngIf="!emepzarVar" (click)="emepzar()">Empezar</button>
+<app-escena *ngIf="emepzarVar" [frases]="frases" ></app-escena>
