--- a/src/app/escena/escena.component.html
+++ b/src/app/escena/escena.component.html
@@ -1,5 +1,5 @@
-<button (click)="decrement()">Anterior</button>
-<button (click)="increment()">Seguent</button>
+<button (click)="prev()">Anterior</button>
+<button (click)="next()">Seguent</button>
 
 <div class="frases" *ngFor="let item of frases" [ngClass]="{'activa': item.valor}">
     <p>{{item.frase}}</p>
